@@ -1,19 +1,29 @@
-package com.example.test.demo.jvm;
+package com.example.test.demo.jvm.heap;
 
 import java.util.LinkedList;
 import java.util.List;
 
 /**
- * -Xms20m -Xmx20m -XX:+HeapDumpOnOutOfMemoryError
+ * <--输出JVM参数-->
+ * -XX:+UnlockExperimentalVMOptions -XX:+UnlockDiagnosticVMOptions -XX:+PrintFlagsFinal  -XX:+PrintCommandLineFlags -showversion
+ *
+ * <--输出OOM错误-->
+ * -XX:+HeapDumpOnOutOfMemoryError
+ *
+ * <--GC日志参数-->
+ * -XX:+PrintGCDetails -XX:+PrintGCTimeStamps and -XX:+PrintGCDateStamps
+ *
+ * -Xms20m -Xmx20m
  */
 public class HeapOOMTest {
-    static class Student{
-
-    }
     public static void main(String[] args) {
         List<Student> list = new LinkedList<>();
-        while(true){
+        while (true) {
             list.add(new Student());
         }
+    }
+
+    static class Student {
+
     }
 }
